syntax = "proto3";

package login;

message LoginRequest {
    string account = 1;
    string password = 2;
}

message Auth {
    int32 account_id = 1;
    int32 account_type_id = 2;
    int32 agency_id = 3;
    int32 academy_id = 4;
    string account = 5;
    int32 state = 6;
}

message ErrorDetail {
    string code = 1;
    string message = 2;
    string user_message = 3;
}

// 로그인 응답 구조체 (성공/실패 모두 처리)
message LoginResponse {
    bool success = 1;
    oneof result {
        Auth auth = 2;
        ErrorDetail error = 3;
    }
}